k8s/static_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-profiling-service
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: data-profiling
